# cat_render

./: Cargo.toml  README.md  TODO.md
.github/workflows/: test.yml
assets/: shader.wgsl
examples/: font.rs  many_sprites.rs  objects.rs  test.rs  ui.rs
src/: app.rs  context.rs  lib.rs  window.rs  winit.rs
src/render/: bind_group.rs  buffer.rs  camera.rs  color.rs  mesh.rs  mod.rs  pipeline.rs  render_pipeline.rs  small.rs  surface.rs  texture.rs  uniform.rs
src/utils/: cat_typeid.rs  fs.rs  input.rs  logger.rs  mod.rs  timer.rs
src/utils/render/: mod.rs  sprite.rs  sprite_shader.wgsl  texture_atlas.rs
src/utils/text/: font.rs  mod.rs
src/utils/ui/: mod.rs
