[package]
name = "cat_render"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21", features = [ "derive" ] }
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
wgpu = "24.0.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
conquer-once = { version = "0.4.0" }
anyhow = "1.0.95"
glam = "0.29.2"


[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
